2003-08-23	Mike Bourgeous		<nitrogen@slimetech.com>

	* Fixed comment in WinTV-HD firmware extract script.
	* Changed 8020 to 8024 in the HPIP range in tl880doc.txt.

2003-08-18	Mike Bourgeous		<nitrogen@slimetech.com>

	* Added information on more registers.

2003-08-16	Mike Bourgeous		<nitrogen@slimetech.com>

	* Added information on more registers.

2003-08-15	Mike Bourgeous		<nitrogen@slimetech.com>

	* Added information on more registers.
	* Added more information to tl880doc.txt about sync generator (such as
	  names of some of the fields).

2003-08-14	Mike Bourgeous		<nitrogen@slimetech.com>

	* Added tl880_set_dpc_pll_const function to driver/tl880init.c
	* Created new tool - tools/dpc/setconst.c
	* Created new tool - tools/dpc/getconst.c
	* Renamed tools/dpc/dpcaux to tools/dpc/dpcsync

2003-08-11	Mike Bourgeous		<nitrogen@slimetech.com>

	* Added documentation on sync generator registers to tl880doc.txt

2003-07-28	Mike Bourgeous		<nitrogen@slimetech.com>

	* Added more information to doc/myhd_154.txt and doc/tl880doc.txt,
	  including new memory offsets and a list of some of the register
	  blocks of the internal TL880 components.

2003-07-24	Mike Bourgeous		<nitrogen@slimetech.com>

	* Added initial MSP34xx support.
	* Created tl880audio.c (routines to handle audio)

2003-07-20	Mike Bourgeous		<nitrogen@slimetech.com>

	* Added inital tuner support.
	* Created tl880input.c (routines to switch inputs)

2003-06-25	Mike Bourgeous		<nitrogen@slimetech.com>

	* Reworked all I2C support, with excellent results on MyHD (still
	  needs testing on other cards).
	* Swapped SDA/SCL lines on WinTV-HD to see if they were wrong (might
	  need to swap them back).
	* Swapped SDA/SCL lines on WinTV-HD back to previous values.
	* Updated I2C documentation (doc/i2c.txt).

2003-06-24	Mike Bourgeous		<nitrogen@slimetech.com>

	* Added support for HiPix.

2003-06-16	Mike Bourgeous		<nitrogen@slimetech.com>

	* Corrected MDP-120 detection.
